--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,12 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
+$red: #a84c3d;
 $blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
+$yellow: #edb846;
+$orange: #f17140;
+$green: #63a46c;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$beige: #faf1e3;
+$sage: #588f87
