--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,20 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+body {
+    background-color: $beige;
+    color: $beige;
+  }
+    body, h1, h2, h3, p {
+    margin: 0;
+    color: $sage;
+  }
+  ul {
+    padding: 0;
+  }
+  a {
+    text-decoration: none;
+    display: inline-block;
+  }
