--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1 class="my-2">Weekly water delivery from Newlands Spring to your home.</h1>
     <p>Pure. Alive. Sacred.</p>
-    <%= link_to 'JOIN THE FLOW', new_user_registration_path, class: 'btn btn-beige'  %>
+    <%= link_to 'JOIN THE FLOW', new_user_registration_path, class: 'btn btn-beige my-3'  %>
     <!--<a class="btn btn-beige my-2" href="#">JOIN THE FLOW</a>-->
   </div>
 </div>
