--- a/app/assets/stylesheets/components/_form_legend_clear.scss
+++ b/app/assets/stylesheets/components/_form_legend_clear.scss
@@ -8,3 +8,71 @@
 legend ~ div.form-check:first-of-type {
   clear: left;
 }
+
+.form-label {
+  color: $gray;
+  letter-spacing: 1px;
+
+}
+
+.form-select {
+    border-radius: 8px !important;
+  line-height: 2.5
+}
+.form-control {
+  border-radius: 8px !important;
+  line-height: 2.5
+}
+
+.mapboxgl-ctrl-geocoder {
+  max-width: none;
+  // width: 100%;
+  // border: 1px solid lightgrey;
+  box-shadow: none;
+  // background-color: transparent;
+  border-radius: 8px !important;
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: var(--bs-body-color);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: var(--bs-body-bg);
+  background-clip: padding-box;
+  border: var(--bs-border-width) solid var(--bs-border-color);
+  // border-radius: var(--bs-border-radius);
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.mapboxgl-ctrl-geocoder--icon-search {
+    position: absolute;
+    top: 1.2rem;
+    left: 1rem;
+    width: 23px;
+    height: 23px;
+}
+.mapboxgl-ctrl-geocoder--icon {
+    display: inline-block;
+    vertical-align: middle;
+    speak: none;
+    fill: #757575;
+    top: 1.2rem;
+}
+
+@media screen and (min-width: 640px) {
+  .mapboxgl-ctrl-geocoder--icon-search {
+      left: 1rem;
+      width: 20px;
+      height: 20px;
+      top: 1rem;
+  }
+}
+@media screen and (min-width: 640px) {
+    .mapboxgl-ctrl-geocoder--icon {
+        top: 1rem;
+    }
+}
